[project]
name = "tokysnatcher"
version = "0.3.2"
description = "A simple audiobook downloader for tokybook.com"
readme = "README.md"
requires-python = ">=3.9,<3.15"
dependencies = [
  "gazpacho==1.1",
  "halo==0.0.31",
  "json5==0.12.0",
  "pebble==5.1.3",

  "questionary==2.1.1",
  "requests==2.32.3",
  "tqdm==4.67.1",
  "urllib3==2.4.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rahaaatul/TokySnatcher"
"Bug Tracker" = "https://github.com/rahaaatul/TokySnatcher/issues"

[project.scripts]
tokysnatcher = 'tokysnatcher.__main__:main'

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
