[project]
name = "tokysnatcher"
version = "0.5.0"
description = "A simple audiobook downloader for tokybook.com"
readme = "README.md"
requires-python = ">=3.9,<3.15"
dependencies = [
  "questionary>=2.1.1",
  "requests>=2.32.3",
  "rich",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rahaaatul/TokySnatcher"
"Bug Tracker" = "https://github.com/rahaaatul/TokySnatcher/issues"

[project.scripts]
tokysnatcher = 'tokysnatcher.__main__:main'

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["analysis*"]
